tests/ui/lifetimes/raw/immediately-followed-by-lt.e2021.stderr
error: character literal may only contain one codepoint
  --> $DIR/immediately-followed-by-lt.rs:15:4
   |
LL | w!('r#long'id);
   |    ^^^^^^^^
   |
help: if you meant to write a string literal, use double quotes
   |
LL - w!('r#long'id);
LL + w!("r#long"id);
   |

error: aborting due to 1 previous error

